Fix JS and data paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "/js/three.module.js",
-          "three/addons/": "/js/addons/",
+          "three": "js/three.module.js",
+          "three/addons/": "js/addons/",
           "@sparkjsdev/spark": "https://sparkjs.dev/releases/spark/0.1.10/spark.module.js"
         }
       }
@@ -491,6 +491,6 @@
     </div>
 
     <!-- ロジックはすべて viewer.js に切り出し -->
-    <script type="module" src="/js/viewer.js"></script>
+    <script type="module" src="js/viewer.js"></script>
   </body>
 </html>
